# p2p-harvest-game

./: .game_state.json  .gitignore  Cargo.toml  DEVELOPER_GUIDE.md  ERROR_FIX.md  MIGRATION_GUIDE.md  README.md  REFACTORING_COMPLETE.md  TRADE_IMPLEMENTATION.md  WEB_QUICKSTART.md  WEB_UI_COMPLETE.md  build-web.sh  index.html
assets/: index-BE1HaiW4.js  index-CSpKHpKZ.css  index-qQoLntlG.js  p2p_harvest_game-Cm7l9kv-.js  p2p_harvest_game-D1rCDSz1.js  p2p_harvest_game_bg-CjfFpuCY.wasm
docs/: BUILD_INSTRUCTIONS.md  CHANGELOG_MARKET.md  FIXES_APPLIED.md  GETTING_STARTED_WEB.md  IMPLEMENTATION_SUMMARY.md  MARKET_FEATURE.md  MARKET_QUICKSTART.md  MARKET_UI_GUIDE.md  QUICK_COMMANDS.md  QUICK_REFERENCE.md  REFACTORING_SUMMARY.md  WHATS_NEW.md
src/: crop.rs  game.rs  lib.rs  main.rs  message.rs  player.rs  trade_manager.rs
src/cli/: app.rs  mod.rs  persistence.rs  renderer.rs
src/core/: crop.rs  game_engine.rs  mod.rs  player.rs  types.rs
src/crop/: mod.rs
src/event/: input.rs  mod.rs  trade.rs
src/game/: mod.rs
src/network/: manager.rs  mod.rs  trade_protocol.rs  trade_ui.rs
src/player/: mod.rs
src/seasson/: mod.rs
src/trade/: mod.rs
src/trade_manager/: mod.rs
src/v1/: game.rs  trade.rs
src/wasm/: game_wrapper.rs  mod.rs
web/: .gitignore  README.md  UI_GUIDE.md  WASM_LOADING_FIX.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  index.css  types.ts  useGame.ts
