[package]
name = "p2p-harvest-game"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
rand = "0.9"
uuid = { version = "1.18", features = ["v4", "serde"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
crossterm = { version = "0.29", default-features = false, features = ["windows", "events"] }
clap = { version = "4.5", features = ["derive"] }
