[package]
name = "p2p-harvest-game"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", default-features = false, features = ["sync"] }
tokio-stream = { version = "0.1", default-features = false, features = ["sync"] }
rand = "0.9"
uuid = { version = "1.18", features = ["v4", "serde"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
crossterm = { version = "0.29", default-features = false, features = ["windows", "events"] }
clap = { version = "4.5", features = ["derive"] }
iroh = { version = "0.95", default-features = false }
n0-future = "0.3"
async-channel = "2.3"
